# derfbot

./: .gitignore  README.md  docker-compose.yml  test.sh
derfbot/: Dockerfile.derfbot  derfbot.py  pyproject.toml  test.py
fastchat/: Dockerfile.fastchat  pyproject.toml  start.sh
