[tool.poetry]
name = "derfbot"
version = "0.1.0"
description = ""
authors = ["mcgillij <mcgillivray.jason@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.2.2"
requests = "^2.31.0"
asyncio = "^3.4.3"
redis = "^4.5.4"
msgsplitter = "^1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
